Modificando imagenes y valores de imagenes en css

--- a/pages/marcas-de-perfumes/hermes.html
+++ b/pages/marcas-de-perfumes/hermes.html
@@ -42,9 +42,9 @@
         <h3>Últimas fragancias</h3>
         <ul class="con-imagen">
             <li>Terre d'Hermès Eau de Parfum Intense (2025)</li>
-            <img src="../../access/imagenes/terre.jpg" alt="Terre d'Hermès Eau de Parfum Intense (2025)">
+            <img src="../../access/imagenes/terre2.jpg" alt="Terre d'Hermès Eau de Parfum Intense (2025)">
             <li> Barenia Eau de Parfum (2024)</li>
-            <img src="../../access/imagenes/barenia.jpg" alt="Hermes Barenia">
+            <img src="../../access/imagenes/barenia2.jpg" alt="Hermes Barenia">
         </ul>
         </section>
     </main>
