--- a/pages/marcas-de-perfumes/givenchy.html
+++ b/pages/marcas-de-perfumes/givenchy.html
@@ -28,7 +28,7 @@
                     <a href="../marcas-recomendadas.html">Perfumes Recomendados</a>
                 </li>
                 <li>
-                    <a href="../contacto.html">Contacto</a>
+                    <a href="../contacto-bootstrap.html">Contacto</a>
                 </li>
             </ul>
         </nav>
