--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="pages/marcas-recomendadas.html">Perfumes Recomendados</a>
                 </li>
                 <li>
-                    <a href="pages/contacto.html">Contacto</a>
+                    <a href="pages/contacto-bootstrap.html">Contacto</a>
                 </li>
             </ul>
         </nav>
